[package]
name = "ns_luis"
description = "LUIS Driver SDK"
version = "0.1.1"
authors = ["Gary Hai <gary@neunit.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "ns_luis"
crate-type = ["dylib", "rlib"]

[dependencies]
actix-web = "0.7.19"
chrono = "0.4.6"
config = "0.9.2"
failure = "0.1.5"
flexi_logger = "0.11.0"
futures = "0.1.25"
lazy_static = "1.3.0"
log = "0.4.6"
luis_sys = "0.3.12"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"